fix(Pagination): jump to page alignment

--- a/components/pagination/Pagination.module.scss
+++ b/components/pagination/Pagination.module.scss
@@ -164,6 +164,11 @@
 			> * {
 				height: 100%;
 			}
+
+			> form {
+				width: fit-content;
+				margin-left: auto;
+			}
 		}
 		padding: 0;
 		flex: 0 1 20%;
